# nanoqbf

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.h  MiniQBF.cpp  MiniQBF.h  NanoQBF.cpp  NanoQBF.h  Options.cpp  Options.h  ParseUtils.h  README.md  Reader.cpp  Reader.h  SatSolver.h  Types.cpp  Types.h  auxutils.h  doc.conf  hashes.cpp  hashes.h  ipasir-glucose4.cpp  ipasir-maplesat.cpp  ipasir.h  main.cpp  types.cpp  types.h
test/: test_types.cpp
tools/: ctimeout.sh
types/: Arena.h  Assignment.cpp  Assignment.h  Assumption.h  Clause.cpp  Clause.h  Formula.cpp  Formula.h  Partial.h  Quant.cpp  Quant.h  common.h
